--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
     <meta name="msapplication-config" content="/favicon_io/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="{{ site.description }}">
-    <meta name="keywords" content="{{ site.keywords }}">
-    <meta name="author" content="{{ site.author }}">
+    <meta name="description" content="Mastering Vector Search for Developers is a comprehensive guide on vector search, aimed at helping developers leverage this powerful technique in their applications. Published by The Pragmatic Bookshelf.">
+    <meta name="keywords" content="Vector Search, Developers, Mastering Vector Search, The Pragmatic Bookshelf, Search Technology">
+    <meta name="author" content="Ben Greenberg">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:title" content="{{ site.title }}">
-    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:title" content="Mastering Vector Search for Developers">
+    <meta property="og:description" content="Mastering Vector Search for Developers is a comprehensive guide on vector search, aimed at helping developers leverage this powerful technique in their applications. Published by The Pragmatic Bookshelf.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="{{ site.url }}">
-    <meta property="og:image" content="{{ site.url }}/book_site_placeholder_img.png">
+    <meta property="og:url" content="https://vectorsearchbook.com">
+    <meta property="og:image" content="https://vectorsearchbook.com/book_site_placeholder_img.png">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{ site.title }}">
-    <meta name="twitter:description" content="{{ site.description }}">
-    <meta name="twitter:image" content="{{ site.url }}/book_site_placeholder_img.png">
-    <meta name="twitter:site" content="@{{ site.twitter_username }}">
+    <meta name="twitter:title" content="Mastering Vector Search for Developers">
+    <meta name="twitter:description" content="Mastering Vector Search for Developers is a comprehensive guide on vector search, aimed at helping developers leverage this powerful technique in their applications. Published by The Pragmatic Bookshelf.">
+    <meta name="twitter:image" content="https://vectorsearchbook.com/book_site_placeholder_img.png">
+    <meta name="twitter:site" content="@hummusonrails">
 
-    <link rel="canonical" href="{{ site.url }}">
+    <link rel="canonical" href="https://vectorsearchbook.com">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gradient-to-br from-purple-500 to-pink-500 flex items-center justify-center min-h-screen p-4">
